# PlotDigitizer

./: README.md  pyproject.toml
plot_digitizer/: axis_reader.py  cli.py  curve_extractor.py  digitizer.py  plot_detector.py  plotter.py
plot_digitizer/web/: app.py  index.html
tests/: generate_test_plots.py  run_tests.py
